--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,16 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.3.1</version>
+                <configuration>
+                    <to>
+                        <image>code-challenge</image>
+                    </to>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
