--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - '8080:8080'
     environment:
       SPRING_DATA_MONGODB_HOST: mongodb
+      SPRING_PROFILES_ACTIVE: test
     networks:
       - app-tier
     depends_on:
