--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,3 @@
-spring:
-  data:
-    mongodb:
-      host: mongodb
-      port: 27017
-      database: users
-
 management:
   info:
     git:
@@ -13,3 +6,23 @@ management:
     web:
       exposure:
         include: "*"
+
+---
+spring:
+  profiles:
+    active: local
+  data:
+    mongodb:
+      host: localhost
+      port: 27017
+      database: users
+
+---
+spring:
+  profiles:
+    active: docker
+  data:
+    mongodb:
+      host: mongodb
+      port: 27017
+      database: users
