--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 HELP.md
+.mvn/
 target/
 !.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+!**/src/main/**
+!**/src/test/**
 
 ### STS ###
 .apt_generated
@@ -16,7 +17,7 @@ target/
 ### IntelliJ IDEA ###
 .idea
 *.iws
-*.iml
+*.imcontentdifferentl
 *.ipr
 
 ### NetBeans ###
@@ -26,8 +27,11 @@ target/
 /nbdist/
 /.nb-gradle/
 build/
-!**/src/main/**/build/
-!**/src/test/**/build/
 
 ### VS Code ###
 .vscode/
+
+*.iml
+
+### Mac ###
+.DS_Store%
